<resources>
    <string name="app_name">MuseBox</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="playlist">Playlist</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create">Create</string>
    <string name="playback_mode">Shuffle</string>
    <string name="album_art">Album art</string>
    <string name="play_pause">Play/Pause</string>
    <string name="menu">Menu</string>
    <string name="no_favorites">No favorite songs yet</string>
    <string name="no_playlists">No playlists</string>
    <string name="create_new_playlist">Create new playlist</string>
</resources>